projects section ready

--- a/index.html
+++ b/index.html
@@ -16,18 +16,93 @@
     <header class="header">
       <nav class="header_nav">
         <ul class="header_nav-leftlist">
-          <li>About</li>
-          <li>Manifesto</li>
-          <li>Projects</li>
+          <li>
+            <a class="header_nav-leftlist__link" href="#About">About</a>
+          </li>
+          <li>
+            <a class="header_nav-leftlist__link" href="#Manifesto">Manifesto</a>
+          </li>
+          <li>
+            <a class="header_nav-leftlist__link" href="#Projects">Projects</a>
+          </li>
         </ul>
         <ul class="header_nav-rightlist">
-          <li>Shop</li>
-          <li>Contact</li>
-          <li>It</li>
-          <li>Cart (0)</li>
+          <li><a class="header_nav-leftlist__link" href="#Shop">Shop</a></li>
+          <li>
+            <a class="header_nav-leftlist__link" href="#Contact">Contact</a>
+          </li>
+          <li><a class="header_nav-leftlist__link" href="#It">It</a></li>
+          <li>
+            <a class="header_nav-leftlist__link" href="#Cart (0)">Cart (0)</a>
+          </li>
         </ul>
       </nav>
       <img class="header_title" src="./img/IMAGE-1.png" alt="" />
     </header>
+    <section class="artifacts">
+      <h2 class="artifacts_header">
+        Contemporary craft and interiors with a mediterranean soul
+      </h2>
+      <button class="artifacts_button-discover">Discover artifacts</button>
+      <div class="artifacts_gallery">
+        <img class="artifacts_gallery-1" src="./img/IMAGE(1).png" alt="" />
+        <img class="artifacts_gallery-2" src="./img/IMAGE(2).png" alt="" />
+        <img class="artifacts_gallery-3" src="./img/IMAGE(3).png" alt="" />
+      </div>
+      <p>
+        I’m a Spanish artisan, designer and architect based in Italy. My work is
+        based on the application of craftsmanship in objects and spaces design
+        with a contemporary approach.
+      </p>
+      <p>
+        Influenced by the Mediterranean traditions and culture of my hometown –
+        Valencia – my work develops around ceramics and textiles. Each creation
+        is the result of the union between design and craftsmanship and
+        emphasizes the beauty of handmade things and their imperfections.
+      </p>
+      <button class="artifacts_button-more">More about me</button>
+    </section>
+    <section class="proposals">
+      <h3 class="proposals_title">
+        Here you can find the line of essential ceramics, all customizable
+        products and a curated selection of unique pieces
+      </h3>
+      <div class="proposals_main">
+        <img class="proposals_main-img1" src="./img/IMAGE(4).png" alt="" />
+        <ul class="proposals_main-list">
+          <li><a class="proposals_main-list__link" href="#">Artworks</a></li>
+          <li><a class="proposals_main-list__link" href="#">Courses</a></li>
+          <li><a class="proposals_main-list__link" href="#">Gift Card</a></li>
+          <li><a class="proposals_main-list__link" href="#">Homewear</a></li>
+          <li><a class="proposals_main-list__link" href="#">Tableware</a></li>
+        </ul>
+        <img class="proposals_main-img2" src="./img/IMAGE(5).png" alt="" />
+      </div>
+      <button class="proposals_button">Purchase</button>
+    </section>
+    <section class="projects">
+      <h2 class="projects_title">Latest Projects</h2>
+      <p class="projects_description">
+        A selection of projects that are the result of experimentation with
+        natural materials, attention to detail and
+        <br />
+        craftsmanship techniques. Artwork, ceramics and clothing on commission,
+        interior designs and custom furniture.
+      </p>
+      <ul class="projects_list">
+        <li class="projects_list-item">
+          <img src="./img/IMAGE(6).png" alt="" />
+          <p>Ca Benet renovation /</p>
+        </li>
+        <li class="projects_list-item">
+          <img src="./img/IMAGE(7).png" alt="" />
+          <p>Plecs /</p>
+        </li>
+        <li class="projects_list-item">
+          <img src="./img/IMAGE(8).png" alt="" />
+          <p>Ca Benet interior /</p>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
