projects section ready

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Marta Benet</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <nav class="header_nav">
         <ul class="header_nav-leftlist">
           <li>
@@ -103,6 +103,61 @@
           <p>Ca Benet interior /</p>
         </li>
       </ul>
+    </section> -->
+    <section class="services">
+      <h3 class="services_title">Services</h3>
+      <ul class="services_list">
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Workshop & lessons</h4>
+          <p class="services_list-item__text">
+            Monographic courses in group to approach the world of ceramics or
+            sewing and private lessons to deepen or follow a longer training
+            path in one of these disciplines.
+          </p>
+        </li>
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Architecture & Interiors</h4>
+          <p class="services_list-item__text">
+            Constructive, functional and aesthetic solutions for the
+            Renovations, furnishing, decoration, coverings and finishes
+            solutions.
+          </p>
+        </li>
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Commissioned ceramics</h4>
+          <p class="services_list-item__text">
+            Personalized tableware with initials or writings plaques for shops,
+            house numbers
+          </p>
+        </li>
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Bespoke artworks</h4>
+          <p class="services_list-item__text">
+            Textile art, ceramic wall sculptures and custom-made ceramic panels
+          </p>
+        </li>
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Made-to-measure clothes</h4>
+          <p class="services_list-item__text">
+            Made-to-measure clothes everyday use or for a special occasion
+          </p>
+        </li>
+        <li class="services_list-item">
+          <h4 class="services_list-item__title">Bespoke furniture</h4>
+          <p class="services_list-item__text">
+            Design of custom-made ceramic lighting for domestic spaces or
+            hospitality facilities. Customization of the furniture product
+            according to the interior design.
+          </p>
+        </li>
+      </ul>
+      <p class="services_contact">
+        For further information about services, ask for a quote or an
+        appointment
+      </p>
+      <button class="services_call">
+        <a href="tel:+380738383775">Contact me</a>
+      </button>
     </section>
   </body>
 </html>
