--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
       </nav>
-      <img class="header_title" src="./img/IMAGE-1.png" alt="" />
+      <img class="header_title" src="./img/IMAGE-1.png" alt="?" />
     </header>
     <section class="artifacts">
       <h2 class="artifacts_header">
@@ -45,9 +45,9 @@
       </h2>
       <button class="artifacts_button-discover">Discover artifacts</button>
       <div class="artifacts_gallery">
-        <img class="artifacts_gallery-1" src="./img/IMAGE(1).png" alt="" />
-        <img class="artifacts_gallery-2" src="./img/IMAGE(2).png" alt="" />
-        <img class="artifacts_gallery-3" src="./img/IMAGE(3).png" alt="" />
+        <img class="artifacts_gallery-1" src="./img/IMAGE(1).png" alt="?" />
+        <img class="artifacts_gallery-2" src="./img/IMAGE(2).png" alt="?" />
+        <img class="artifacts_gallery-3" src="./img/IMAGE(3).png" alt="?" />
       </div>
       <p>
         I’m a Spanish artisan, designer and architect based in Italy. My work is
@@ -68,7 +68,7 @@
         products and a curated selection of unique pieces
       </h3>
       <div class="proposals_main">
-        <img class="proposals_main-img1" src="./img/IMAGE(4).png" alt="" />
+        <img class="proposals_main-img1" src="./img/IMAGE(4).png" alt="?" />
         <ul class="proposals_main-list">
           <li><a class="proposals_main-list__link" href="#">Artworks</a></li>
           <li><a class="proposals_main-list__link" href="#">Courses</a></li>
@@ -76,7 +76,7 @@
           <li><a class="proposals_main-list__link" href="#">Homewear</a></li>
           <li><a class="proposals_main-list__link" href="#">Tableware</a></li>
         </ul>
-        <img class="proposals_main-img2" src="./img/IMAGE(5).png" alt="" />
+        <img class="proposals_main-img2" src="./img/IMAGE(5).png" alt="?" />
       </div>
       <button class="proposals_button">Purchase</button>
     </section>
@@ -91,19 +91,19 @@
       </p>
       <ul class="projects_list">
         <li class="projects_list-item">
-          <img src="./img/IMAGE(6).png" alt="" />
+          <img src="./img/IMAGE(6).png" alt="?" />
           <p>Ca Benet renovation /</p>
         </li>
         <li class="projects_list-item">
-          <img src="./img/IMAGE(7).png" alt="" />
+          <img src="./img/IMAGE(7).png" alt="?" />
           <p>Plecs /</p>
         </li>
         <li class="projects_list-item">
-          <img src="./img/IMAGE(8).png" alt="" />
+          <img src="./img/IMAGE(8).png" alt="?" />
           <p>Ca Benet interior /</p>
         </li>
       </ul>
-    </section> -->
+    </section>
     <section class="services">
       <h3 class="services_title">Services</h3>
       <ul class="services_list">
@@ -158,6 +158,91 @@
       <button class="services_call">
         <a href="tel:+380738383775">Contact me</a>
       </button>
+    </section> -->
+    <section class="novelties">
+      <h2 class="novelties_title">A selection of novelties</h2>
+      <div class="novelties_arrows">
+        <svg
+          class="novelties_arrows-leftarrow"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M7.70703 14.7069C7.5195 14.8944 7.26519 14.9997 7.00003 14.9997C6.73487 14.9997 6.48056 14.8944 6.29303 14.7069L2.29303 10.7069C2.10556 10.5194 2.00024 10.2651 2.00024 9.99992C2.00024 9.73475 2.10556 9.48045 2.29303 9.29292L6.29303 5.29292C6.48163 5.11076 6.73424 5.00997 6.99643 5.01224C7.25863 5.01452 7.50944 5.11969 7.69485 5.3051C7.88026 5.49051 7.98543 5.74132 7.9877 6.00352C7.98998 6.26571 7.88919 6.51832 7.70703 6.70692L5.41403 8.99992H17C17.2652 8.99992 17.5196 9.10528 17.7071 9.29281C17.8947 9.48035 18 9.7347 18 9.99992C18 10.2651 17.8947 10.5195 17.7071 10.707C17.5196 10.8946 17.2652 10.9999 17 10.9999H5.41403L7.70703 13.2929C7.8945 13.4804 7.99982 13.7348 7.99982 13.9999C7.99982 14.2651 7.8945 14.5194 7.70703 14.7069Z"
+            fill="black"
+          />
+        </svg>
+        <svg
+          class="novelties_arrows-leftcircle"
+          width="48"
+          height="48"
+          viewBox="0 0 48 48"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M24 47.5C11.0213 47.5 0.5 36.9787 0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24C47.5 36.9787 36.9787 47.5 24 47.5Z"
+            fill="#FCFAF8"
+            stroke="#0B0805"
+          />
+        </svg>
+        <svg
+          class="novelties_arrows-rightarrow"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M17 8L21 12M21 12L17 16M21 12H3"
+            stroke="black"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+        <svg
+          class="novelties_arrows-rightcircle"
+          width="48"
+          height="48"
+          viewBox="0 0 48 48"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M0.5 24C0.5 11.0213 11.0213 0.5 24 0.5C36.9787 0.5 47.5 11.0213 47.5 24C47.5 36.9787 36.9787 47.5 24 47.5C11.0213 47.5 0.5 36.9787 0.5 24Z"
+            fill="#FCFAF8"
+            stroke="#0B0805"
+          />
+        </svg>
+      </div>
+      <button class="novelties_viewall">view all</button>
+      <ul class="novelties_list">
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(9).png" alt="?" />
+          <p>Milano Sugar Bowl Sole</p>
+          <p>36,00 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(10).png" alt="?" />
+          <p>
+            Set of 4 Bread Plates & 1 <br />
+            Breadstick Holder Entrellaçat
+          </p>
+          <p>105 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(11).png" alt="?" />
+          <p>Ralleta Medium Aperitivo Set Blue</p>
+          <p>72 €</p>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
