--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Marta Benet</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <nav class="header_nav">
         <ul class="header_nav-leftlist">
           <li>
@@ -158,7 +158,7 @@
       <button class="services_call">
         <a href="tel:+380738383775">Contact me</a>
       </button>
-    </section> -->
+    </section>
     <section class="novelties">
       <h2 class="novelties_title">A selection of novelties</h2>
       <div class="novelties_arrows">
@@ -226,23 +226,62 @@
       <ul class="novelties_list">
         <li class="novelties_list-item">
           <img src="./img/IMAGE(9).png" alt="?" />
-          <p>Milano Sugar Bowl Sole</p>
-          <p>36,00 €</p>
+          <p class="novelties_list-item__descr">Milano Sugar Bowl Sole</p>
+          <p class="novelties_list-item__price">36,00 €</p>
         </li>
         <li class="novelties_list-item">
           <img src="./img/IMAGE(10).png" alt="?" />
-          <p>
+          <p class="novelties_list-item__descr">
             Set of 4 Bread Plates & 1 <br />
             Breadstick Holder Entrellaçat
           </p>
-          <p>105 €</p>
+          <p class="novelties_list-item__price">105,00 €</p>
         </li>
         <li class="novelties_list-item">
           <img src="./img/IMAGE(11).png" alt="?" />
-          <p>Ralleta Medium Aperitivo Set Blue</p>
-          <p>72 €</p>
+          <p class="novelties_list-item__descr">
+            Ralleta Medium Aperitivo Set Blue
+          </p>
+          <p class="novelties_list-item__price">72,00 €</p>
         </li>
       </ul>
     </section>
+    <footer class="newsletter">
+      <h2 class="newsletter_title">The newsletter</h2>
+      <div class="newsletter_content">
+        <p class="newsletter_content-text">
+          Stay up to date on courses, new products on the online shop, special
+          discounts and crafts events.
+          <br /><br />I accept Privacy Policy
+        </p>
+        <input class="newsletter_content-input" type="text" />
+      </div>
+      <ul class="newsletter_info">
+        <li class="newsletter_info-item">
+          <a href="#">Cookie Policy</a>
+        </li>
+        <li class="newsletter_info-item">
+          <a href="#">Privacy policy</a>
+        </li>
+        <li class="newsletter_info-item">
+          <a href="#">Tracking preferences</a>
+        </li>
+        <li class="newsletter_info-item">
+          <a href="#">Terms and conditions</a>
+        </li>
+        <li class="newsletter_info-item">
+          <a href="#">Shipping</a>
+        </li>
+        <li class="newsletter_info-item">
+          <a href="#">Instagram</a>
+        </li>
+      </ul>
+      <ul class="newsletter_about">
+        <li class="newsletter_about-item">
+          ©2023 Marta Benet. All rights reserved - P.Iva IT10087680962
+        </li>
+        <li class="newsletter_about-item">Crafted by Beconcept Studio</li>
+      </ul>
+    </footer>
   </body>
 </html>
