--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic"
       rel="stylesheet"
     />
+    <script src="./index.js" defer></script>
     <title>Marta Benet</title>
   </head>
   <body>
@@ -70,11 +71,21 @@
       <div class="proposals_main">
         <img class="proposals_main-img1" src="./img/IMAGE(4).png" alt="?" />
         <ul class="proposals_main-list">
-          <li><a class="proposals_main-list__link" href="#">Artworks</a></li>
-          <li><a class="proposals_main-list__link" href="#">Courses</a></li>
-          <li><a class="proposals_main-list__link" href="#">Gift Card</a></li>
-          <li><a class="proposals_main-list__link" href="#">Homewear</a></li>
-          <li><a class="proposals_main-list__link" href="#">Tableware</a></li>
+          <li>
+            <a class="proposals_main-list__link" href="#Artworks">Artworks</a>
+          </li>
+          <li>
+            <a class="proposals_main-list__link" href="#Courses">Courses</a>
+          </li>
+          <li>
+            <a class="proposals_main-list__link" href="#GiftCard">Gift Card</a>
+          </li>
+          <li>
+            <a class="proposals_main-list__link" href="#Homewear">Homewear</a>
+          </li>
+          <li>
+            <a class="proposals_main-list__link" href="#Tableware">Tableware</a>
+          </li>
         </ul>
         <img class="proposals_main-img2" src="./img/IMAGE(5).png" alt="?" />
       </div>
@@ -239,6 +250,34 @@
         </li>
         <li class="novelties_list-item">
           <img src="./img/IMAGE(11).png" alt="?" />
+          <p class="novelties_list-item__descr">
+            Ralleta Medium Aperitivo Set Blue
+          </p>
+          <p class="novelties_list-item__price">72,00 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(12).jpeg" alt="?" />
+          <p class="novelties_list-item__descr">
+            Ralleta Medium Aperitivo Set Blue
+          </p>
+          <p class="novelties_list-item__price">72,00 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(13).jpeg" alt="?" />
+          <p class="novelties_list-item__descr">
+            Ralleta Medium Aperitivo Set Blue
+          </p>
+          <p class="novelties_list-item__price">72,00 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(14).jpeg" alt="?" />
+          <p class="novelties_list-item__descr">
+            Ralleta Medium Aperitivo Set Blue
+          </p>
+          <p class="novelties_list-item__price">72,00 €</p>
+        </li>
+        <li class="novelties_list-item">
+          <img src="./img/IMAGE(15).jpeg" alt="?" />
           <p class="novelties_list-item__descr">
             Ralleta Medium Aperitivo Set Blue
           </p>
