--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Marta Benet</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <nav class="header_nav">
         <ul class="header_nav-leftlist">
           <li>
@@ -168,7 +168,7 @@
       <button class="services_call">
         <a href="tel:+380738383775">Contact me</a>
       </button>
-    </section> -->
+    </section>
     <section class="novelties">
       <h2 class="novelties_title">A selection of novelties</h2>
       <div class="event-listener">
@@ -311,7 +311,7 @@
         </ul>
       </div>
     </section>
-    <!-- <footer class="newsletter">
+    <footer class="newsletter">
       <h2 class="newsletter_title">The newsletter</h2>
       <div class="newsletter_content">
         <p class="newsletter_content-text">
@@ -347,7 +347,7 @@
         </li>
         <li class="newsletter_about-item">Crafted by Beconcept Studio</li>
       </ul>
-    </footer> -->
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
