checkbox in proccess

--- a/index.html
+++ b/index.html
@@ -321,9 +321,20 @@
         <p class="newsletter_content-text">
           Stay up to date on courses, new products on the online shop, special
           discounts and crafts events.
-          <br /><br />I accept Privacy Policy
         </p>
-        <input class="newsletter_content-input" type="text" />
+        <p class="newsletter_content-accept">
+          <input
+            class="newsletter_content-accept__checkbox"
+            id="newsletter_content-accept__checkbox"
+            type="checkbox"
+          />
+          <label
+            class="newsletter_content-accept__label"
+            for="newsletter_content-accept__checkbox"
+            >I accept Privacy Policy</label
+          >
+        </p>
+        <input class="newsletter_content-input" type="email" />
       </div>
       <ul class="newsletter_info">
         <li class="newsletter_info-item">
