checkbox accept ready

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         </p>
         <input class="newsletter_content-input" type="email" />
       </div>
-      <button class="newsletter_button">Send news</button>
+      <button class="newsletter_button" disabled="true">Send news</button>
       <ul class="newsletter_info">
         <li class="newsletter_info-item">
           <a href="#">Cookie Policy</a>
